pxc/tests/test_11_foreach/fe_arr3.px

namespace fe_arr3;
import common -;

vector{string} a;
a.resize(100, string());
int t = 0;
foreach (ulong i, long s : a) { // error
  t += numeric_cast{int, long}(s);
}

